-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, 9
-
Component/s: hotspot
-
b93
-
x86_64
-
linux_oracle_6.0
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8239522 | openjdk8u252 | Fei Yang | P2 | Resolved | Fixed | b04 |
| JDK-8323668 | 8u461 | Yagmur Eren | P2 | Closed | Fixed | b01 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/003131.ddehaven/s/src/share/vm/runtime/synchronizer.cpp:1190), pid=22842, tid=140647806699264
# assert(ObjectSynchronizer::verify_objmon_isinpool(inf)) failed: monitor is invalid
#
# JRE version: Java(TM) SE Runtime Environment (9.0-b18) (build 1.9.0-ea-fastdebug-b18)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-201406180031.ddehaven.hotspot-fastdebug mixed mode linux-amd64 compressed oops)
# Core dump written. Default location: /scratch/local/aurora/sandbox/results/ResultDir/inner-complex_copy_1/core or core.22842
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x00007feca06ee800): JavaThread "Loading Thread #31" [_thread_in_vm, id=23139, stack(0x00007feb1e7e8000,0x00007feb1e8e9000)]
Stack: [0x00007feb1e7e8000,0x00007feb1e8e9000], sp=0x00007feb1e8e7150, free space=1020k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x10405ac] VMError::report_and_die()+0x15c;; VMError::report_and_die()+0x15c
V [libjvm.so+0x72ff8b] report_vm_error(char const*, int, char const*, char const*)+0x7b;; report_vm_error(char const*, int, char const*, char const*)+0x7b
V [libjvm.so+0xf7252c] ObjectSynchronizer::inflate(Thread*, oop)+0x67c;; ObjectSynchronizer::inflate(Thread*, oop)+0x67c
V [libjvm.so+0xf759bc] ObjectSynchronizer::fast_enter(Handle, BasicLock*, bool, Thread*)+0x1dc;; ObjectSynchronizer::fast_enter(Handle, BasicLock*, bool, Thread*)+0x1dc
V [libjvm.so+0x9bd368] InterpreterRuntime::monitorenter(JavaThread*, BasicObjectLock*)+0x1c8;; InterpreterRuntime::monitorenter(JavaThread*, BasicObjectLock*)+0x1c8
j java.io.PrintStream.flush()V+4
j runtime.ParallelClassLoading.shared.ClassLoadingThread.println(Ljava/lang/String;)V+43
j runtime.ParallelClassLoading.shared.ClassLoadingThread.run()V+120
v ~StubRoutines::call_stub
V [libjvm.so+0x9d7bd7] JavaCalls::call_helper(JavaValue*, methodHandle*, JavaCallArguments*, Thread*)+0x18a7;; JavaCalls::call_helper(JavaValue*, methodHandle*, JavaCallArguments*, Thread*)+0x18a7
V [libjvm.so+0x9d8d62] JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x622;; JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x622
V [libjvm.so+0x9d90d7] JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0xb7;; JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0xb7
V [libjvm.so+0xaac744] thread_entry(JavaThread*, Thread*)+0xc4;; thread_entry(JavaThread*, Thread*)+0xc4
V [libjvm.so+0xfc55d4] JavaThread::thread_main_inner()+0x1d4;; JavaThread::thread_main_inner()+0x1d4
V [libjvm.so+0xfc5845] JavaThread::run()+0x1e5;; JavaThread::run()+0x1e5
V [libjvm.so+0xda6842] java_start(Thread*)+0xf2;; java_start(Thread*)+0xf2
C [libpthread.so.0+0x7851]
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j java.io.PrintStream.flush()V+4
j runtime.ParallelClassLoading.shared.ClassLoadingThread.println(Ljava/lang/String;)V+43
j runtime.ParallelClassLoading.shared.ClassLoadingThread.run()V+120
v ~StubRoutines::call_stub
- backported by
-
JDK-8239522 runtime/ParallelClassLoading/bootstrap/random/inner-complex assert(ObjectSynchronizer::verify_objmon_isinpool(inf)) failed: monitor is invalid
-
- Resolved
-
-
JDK-8323668 runtime/ParallelClassLoading/bootstrap/random/inner-complex assert(ObjectSynchronizer::verify_objmon_isinpool(inf)) failed: monitor is invalid
-
- Closed
-
- duplicates
-
JDK-8055912 assert(ObjectSynchronizer::verify_objmon_isinpool(inf)) failed: monitor is invalid
-
- Closed
-
-
JDK-8068484 jnilock002 failed with assert: monitor is invalid
-
- Closed
-
- relates to
-
JDK-8044021 gc/gctests/RememberedSet crashed with SIGSEGV in ServiceUtil::visible_oop
-
- Closed
-
-
JDK-8138922 StubCodeDesc constructor publishes partially-constructed objects on StubCodeDesc::_list
-
- Closed
-
-
JDK-8139937 runtime/ParallelClassLoading/bootstrap/random/inner-complex hits G1 assert
-
- Closed
-
-
JDK-8140263 (ch) java/nio/channels/FileChannel/Transfer.java timed out
-
- Closed
-
-
JDK-8068484 jnilock002 failed with assert: monitor is invalid
-
- Closed
-