8047212: runtime/ParallelClassLoading/bootstrap/random/inner-complex assert(ObjectSynchronizer::verify_objmon_isinpool(inf)) failed: monitor is invalid

Fix race between ObjectMonitor alloc and verification code; teach SA about "static pointer volatile" fields.

Reviewed-by: andrew